tests/neg/i14823.check
-- Error: tests/neg/i14823.scala:8:50 ----------------------------------------------------------------------------------
8 |val baz = summon[Mirror.Of[SubA[Int] | SubB[Int]]] // error
  |                                                  ^
  |No given instance of type deriving.Mirror.Of[SubA[Int] | SubB[Int]] was found for parameter x of method summon in object Predef. Failed to synthesize an instance of type deriving.Mirror.Of[SubA[Int] | SubB[Int]]: 
  |	* class Cov is not a generic sum because it is not a sealed class
  |	* class Cov is not a generic product 
